--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - uses: google-github-actions/setup-gcloud@v1
+    - uses: google-github-actions/auth@v0.4.0
       with:
-        SERVICE_ACCOUNT_KEY: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
         
