--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -36,7 +36,7 @@ jobs:
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
 
-      run: |-
+      run: |
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
@@ -49,7 +49,7 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
     
     - name: Deploy to Google VM
-      run: |-
+      run: |
         #Pull container image from the registry
         docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
 
