--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -36,7 +36,7 @@ jobs:
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
 
-      run: |
+      run: |-
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
@@ -44,12 +44,12 @@ jobs:
     
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
-        with:
-          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
+      with:
+        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        project_id: ${{ env.PROJECT_ID }}
     
     - name: Deploy to Google VM
-      run: |
+      run: |-
         #Pull container image from the registry
         docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
 
