--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -42,17 +42,15 @@ jobs:
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
     
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v1'
+    - name: 'Deploy to Google VM'
+      uses: 'google-github-actions/ssh-compute@v0'
       with:
-        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        instance_name: instance-1
+        zone: us-central1-a
+        ssh_private_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: ${{ env.PROJECT_ID }}
-    
-    - name: Deploy to Google VM
       run: |-
         #Pull container image from the registry
         docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-
-        # Run the container on the VM
-        echo "${{ secrets.SERVICE_ACCOUNT_KEY }}"
-        ssh -i ${{ secrets.SERVICE_ACCOUNT_KEY }} kunalmnugalkhod007@34.132.8.167 "docker run -d -p 80:80 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
+        # Run the container on the VM 
+        sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
