--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,8 +49,5 @@ jobs:
         zone: us-central1-a
         ssh_private_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: ${{ env.PROJECT_ID }}
-      run: |-
-        #Pull container image from the registry
-        docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-        # Run the container on the VM 
-        sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        command: docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        command: sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
