--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,5 +49,6 @@ jobs:
         zone: us-central1-a
         ssh_private_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: ${{ env.PROJECT_ID }}
-        command: docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-        command: sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        command: |- 
+          docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+          sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
