Workflow file updated

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -47,8 +47,7 @@ jobs:
       with:
         instance_name: instance-1
         zone: us-central1-a
-        ssh_private_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ env.PROJECT_ID }}
+        ssh_private_key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
         command: |- 
           docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
