Workflow file updated

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -45,7 +45,7 @@ jobs:
     - name: 'Deploy to Google VM'
       uses: 'google-github-actions/ssh-compute@v0'
       with:
-        instance_name: instance-1
+        instance_name: kunalmnugalkhod007@instance-1
         zone: us-central1-a
         ssh_private_key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
         command: |- 
