--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -41,14 +41,16 @@ jobs:
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+
+    - name: Set up SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
     
-    - name: 'Deploy to Google VM'
-      uses: 'google-github-actions/ssh-compute@v0'
-      with:
-        user: kunalmnugalkhod007
-        instance_name: instance-1
-        zone: us-central1-a
-        ssh_private_key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
-        command: |- 
-          docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-          sudo docker run -p 8080:8080 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+    - name: 'SSH into VM'
+      run: |
+        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=~/.ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
