Workflow file updated

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -47,10 +47,10 @@ jobs:
 
     - name: Set up SSH key
       run: |
-        mkdir -p ~/.ssh
-        echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        sudo mkdir ssh
+        echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
+        sudo chmod 600 ./ssh/id_rsa
     
     - name: 'SSH into VM'
       run: |
-        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=~/.ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
