--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -46,11 +46,11 @@ jobs:
       uses: google-github-actions/setup-gcloud@v1
 
     - name: Set up SSH key
-      run: |
-        sudo mkdir ssh
-        echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
-        sudo chmod 600 ./ssh/id_rsa
+      run: |-
+        bash sudo mkdir ssh
+        bash echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
+        bash sudo chmod 600 ./ssh/id_rsa
     
     - name: 'SSH into VM'
-      run: |
+      run: |-
         gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
