--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -42,15 +42,16 @@ jobs:
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
 
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
-
     - name: Set up SSH key
       run: |-
+        bash sudo su
         bash sudo mkdir ssh
         bash echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
         bash sudo chmod 600 ./ssh/id_rsa
     
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+
     - name: 'SSH into VM'
       run: |-
         gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
