--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -44,10 +44,9 @@ jobs:
 
     - name: Set up SSH key
       run: |-
-        bash sudo su
-        bash sudo mkdir ssh
+        bash mkdir ssh
         bash echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
-        bash sudo chmod 600 ./ssh/id_rsa
+        bash chmod 600 ./ssh/id_rsa
     
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
