--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -18,7 +18,7 @@ jobs:
       run: mkdir ssh
 
     - name: Set up SSH key
-      run: echo ${{ secrets.GCP_SSH_PRIVATE_KEY }}> ./ssh/id_rsa
+      run: echo "${{ secrets.GCP_SSH_PRIVATE_KEY }}"> ./ssh/id_rsa.pub
     
     - name: Giving read access 
       run: chmod 600 ./ssh/id_rsa
@@ -56,4 +56,4 @@ jobs:
 
     - name: 'SSH into VM'
       run: |-
-        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa.pub --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
