--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -50,10 +50,10 @@ jobs:
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
-    
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
 
     - name: 'SSH into VM'
       run: |-
-        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa.pub --command docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+        gcloud compute ssh kunalmnugalkhod007@instance-1 --project=prime-apricot-396310 --zone=us-central1-a --ssh-key-file=./ssh/id_rsa.pub --command "docker pull gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
